    request timeouts.  This can be used, for instance, to account for speed-of-light latency
    between physical regions.

  * finagle-core: A convenient method `Client.newService(dest: String, label: String)` was added.

  * finagle-mysql: Add support for MySQL transactions.

  * finagle-stats: A new HostStatsReceiver type is added and used for per host stats.
    It is loaded through LoadService and used by the Stack-based API as a default 
    param. Per host stats can be turned on through `com.twitter.finagle.loadbalancer.perHostStats` 
    flag, and is exported to the "/admin/per_host_metrics.json" route in twitter-server.

  * finagle-http(x): Two missing params were added: `Decompression` and `CompressionLevel`. Both
    client and server may be configured with either `configured` method or `withDecompression`/
    `withCompressionLevel`.

Bug Fixes
~~~~~~~~~

  * finagle-core: `c.t.f.Server.serveAndAnnounce` for a `Service` had its usage
    of `name` and `addr` transposed.


6.24.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: Remove `c.t.f.client.StackClient.Role.loadBalancer`, which
    was unused and duplicated by `c.t.f.loadbalancer.LoadBalancerFactory.role`.

  * finagle-core: `c.t.f.Namer.orElse` was removed; composing Namers
    may be accomplished by constructing an appropriate Dtab.

  * finagle-core: removed experimental `enum` / `expand` from
    `c.t.f.Namer` and `alt` / `union` from `c.t.f.Dtab`.

  * finagle-http: Remove `c.t.f.http.CheckRequestFilter` along with
    `c.t.f.http.CheckHttpRequestFilter`. The functionality has been
    added to `c.t.f.http.codec.HttpServerDispatcher`. In addition,
    the codecError in `c.t.f.http.BadHttpRequest` has been replaced
    with the exception thrown by the HttpServerCodec.

  * finagle-httpx: Remove deprecated code, limited scope of access on internal
    classes.

  * finagle-mux: `c.t.f.mux.lease.exp.WindowedByteCounter` no longer