@@ -13,6 +13,7 @@ scala_library(name='scala',
     'finagle/finagle-core',
     'finagle/finagle-http',
     'util/util-events',
+    'util/util-logging',
     'util/util-core',
   ],
   sources=rglobs('*.scala'),
